--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://k-dunwell-v.github.io/gachadealer-dunwell/",
   "name": "gachadealer-dunwell",
   "version": "0.1.0",
   "private": true,
@@ -17,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build"
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,6 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24"
   }
